ui has an editing tool

--- a/Notebook - Assignment 2.ipynb
+++ b/Notebook - Assignment 2.ipynb
@@ -83,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAW_DIR = r\"C:\\Users\\annal\\ADL\\archive\\real-vs-fake\"\n",
-    "\n",
+    "RAW_DIR = \"data/raw\"\n",
     "PROCESSED_DIR = \"data/processed\"\n",
     "IMAGE_SIZE=(128,128)"
    ]
@@ -122,7 +121,7 @@
     }
    ],
    "source": [
-    "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0)\n",
+    "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0, filters=False)\n",
     "process.run(0.7, 0.3, 1)"
    ]
   },
