--- a/UI-Prep.ipynb
+++ b/UI-Prep.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAW_DIR = r\"C:\\Users\\annal\\ADL\\archive\\real-vs-fake\"\n",
+    "RAW_DIR = \"data/raw/140k faces\"\n",
     "PROCESSED_DIR = \"data/processed\"\n",
     "IMAGE_SIZE=(128,128)"
    ]
@@ -79,24 +79,41 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[WinError 5] A hozzáférés megtagadva: 'data/processed\\\\128\\\\train\\\\rgb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m process\u001b[38;5;241m=\u001b[39mProcess(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, aug_amount\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      2\u001b[0m process\u001b[38;5;241m.\u001b[39mrun(\u001b[38;5;241m0.9\u001b[39m, \u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
-      "File \u001b[1;32m~\\OneDrive\\Dokumentumok\\GitHub\\ADL-AI-Generated-Image-Detection\\Preprocess.py:37\u001b[0m, in \u001b[0;36mProcess.__init__\u001b[1;34m(self, raw_dir, process_dir, image_size, delete_process_dir, batch_size, aug_amount)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m# Deleting the original processed_dir to make the new dataset\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m delete_process_dir \u001b[38;5;129;01mand\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROCESSED_DIR):\n\u001b[1;32m---> 37\u001b[0m     shutil\u001b[38;5;241m.\u001b[39mrmtree(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROCESSED_DIR)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Defining transformations for the images\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresize_transform \u001b[38;5;241m=\u001b[39m transforms\u001b[38;5;241m.\u001b[39mCompose([\n\u001b[0;32m     41\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mResize(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mIMAGE_SIZE),\n\u001b[0;32m     42\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mToTensor(),\n\u001b[0;32m     43\u001b[0m ])\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:781\u001b[0m, in \u001b[0;36mrmtree\u001b[1;34m(path, ignore_errors, onerror, onexc, dir_fd)\u001b[0m\n\u001b[0;32m    779\u001b[0m     \u001b[38;5;66;03m# can't continue even if onexc hook returns\u001b[39;00m\n\u001b[0;32m    780\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m--> 781\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _rmtree_unsafe(path, onexc)\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:629\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onexc)\u001b[0m\n\u001b[0;32m    627\u001b[0m         os\u001b[38;5;241m.\u001b[39mrmdir(fullname)\n\u001b[0;32m    628\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 629\u001b[0m         onexc(os\u001b[38;5;241m.\u001b[39mrmdir, fullname, err)\n\u001b[0;32m    630\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m filenames:\n\u001b[0;32m    631\u001b[0m     fullname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dirpath, name)\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:627\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onexc)\u001b[0m\n\u001b[0;32m    625\u001b[0m fullname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dirpath, name)\n\u001b[0;32m    626\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 627\u001b[0m     os\u001b[38;5;241m.\u001b[39mrmdir(fullname)\n\u001b[0;32m    628\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    629\u001b[0m     onexc(os\u001b[38;5;241m.\u001b[39mrmdir, fullname, err)\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [WinError 5] A hozzáférés megtagadva: 'data/processed\\\\128\\\\train\\\\rgb'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on fake\n",
+      "{8000}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing train: 100%|██████████| 152/152 [23:51<00:00,  9.42s/it]\n",
+      "Processing valid: 100%|██████████| 8/8 [01:09<00:00,  8.70s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on real\n",
+      "{3500}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing train: 100%|██████████| 67/67 [09:50<00:00,  8.82s/it]\n",
+      "Processing valid: 100%|██████████| 4/4 [00:32<00:00,  8.22s/it]\n"
      ]
     }
    ],
    "source": [
-    "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0)\n",
-    "process.run(0.9, 0.1, 0)"
+    "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0, filters=False)\n",
+    "process.run(0.95, 0.05)"
    ]
   },
   {
@@ -109,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "21abdd73-fc67-4085-88c6-698059ea38a1",
    "metadata": {},
    "outputs": [],
@@ -137,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "2db67dc5-5aec-4e72-99ae-572fcf680ba1",
    "metadata": {},
    "outputs": [],
@@ -157,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "9286121d-f4ff-4c8f-a121-85026df1fa60",
    "metadata": {},
    "outputs": [],
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "45fed2e7-7404-4a3b-8629-6083842e3188",
    "metadata": {},
    "outputs": [],
@@ -177,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f9b56644-fdfe-4608-a0cf-c468db7310ee",
    "metadata": {},
    "outputs": [
@@ -185,26 +202,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 1.1753672527970735\n",
-      "Epoch 2/20, Loss: 0.6025866880920363\n",
-      "Epoch 3/20, Loss: 0.5447155918393817\n",
-      "Epoch 4/20, Loss: 0.46101849327176253\n",
-      "Epoch 5/20, Loss: 0.36976973869785756\n",
-      "Epoch 6/20, Loss: 0.2761201551241904\n",
-      "Epoch 7/20, Loss: 0.2162919287911113\n",
-      "Epoch 8/20, Loss: 0.16006820884920794\n",
-      "Epoch 9/20, Loss: 0.12146590437207903\n",
-      "Epoch 10/20, Loss: 0.09607401673005235\n",
-      "Epoch 11/20, Loss: 0.07584814220574332\n",
-      "Epoch 12/20, Loss: 0.06036167557102553\n",
-      "Epoch 13/20, Loss: 0.04956029160006076\n",
-      "Epoch 14/20, Loss: 0.04129925461034782\n",
-      "Epoch 15/20, Loss: 0.035872503172212876\n",
-      "Epoch 16/20, Loss: 0.03321911282374622\n",
-      "Epoch 17/20, Loss: 0.02255662088137791\n",
-      "Epoch 18/20, Loss: 0.024761361810407653\n",
-      "Epoch 19/20, Loss: 0.02673747133093406\n",
-      "Epoch 20/20, Loss: 0.01652910099335894\n"
+      "Batches: 80\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -221,6 +228,14 @@
    "source": [
     "torch.save(model.state_dict(), 'ADL_model.pth')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a038aea-e99f-4058-86b4-0b9f4bbeda6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
