--- a/User Interface.ipynb
+++ b/User Interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "e4867f21-acc8-4a8a-bb24-1403f40a7cf0",
    "metadata": {},
    "outputs": [],
@@ -10,25 +10,27 @@
     "import torch\n",
     "from torchvision import transforms\n",
     "from PIL import Image\n",
-    "import gradio as gr"
+    "import gradio as gr\n",
+    "from NeuralNetworkDIY import ClassifierNetwork, Model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "bd2eb4aa-abe0-45d6-ad8a-117199d60f2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"model.pth\"\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = torch.load(model_path, map_location=device)\n",
-    "model.eval()"
+    "# model_path = \"model.pth\"\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# model = ClassifierNetwork(IMAGE_SIZE=(128,128))  # Match the training setup\n",
+    "# model.load_state_dict(torch.load(model_path, map_location=device))\n",
+    "# model.to(device).eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "769e5b66-189b-4259-9cb3-f5ce17413546",
    "metadata": {},
    "outputs": [],
@@ -41,127 +43,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
+   "id": "aeb68b03-fca7-4bda-85a6-4769502fe7ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_names = [\"Class 0\", \"Class 1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "4c2e79d0-b013-4ab5-9237-43f0ac446e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#megadott kép előkészítése\n",
-    "#ha képformátum, akkor 1 kép lesz összesen\n",
-    "# ha dicom, akkor több is, ezt megnézi előtte\n",
-    "# visszaad egy images nevű tömböt\n",
+    "def predict(image):\n",
+    "    # Preprocess the image\n",
+    "    image = Image.fromarray(image)\n",
+    "    input_tensor = transform(image).unsqueeze(0).to(device)  # Add batch dimension\n",
     "\n",
-    "def preprocess_image(image, dicom, file_format):\n",
-    "    num=1\n",
-    "    if (file_format=='DICOM'):\n",
-    "        num=len(dicom)\n",
-    "    images=[]\n",
-    "    \n",
-    "    for i in range(num):\n",
-    "        if (file_format=='DICOM'):\n",
-    "            dicom_image=pydicom.dcmread(dicom[i])  \n",
-    "            gray_image=dicom_image.pixel_array\n",
-    "        else:\n",
-    "            img = Image.fromarray(np.uint8(image))   \n",
-    "            gray_image = img.convert('L')\n",
-    "        \n",
-    "        image_array = np.array(gray_image)\n",
-    "        resized_image = cv2.resize(image_array, (256, 256))\n",
-    "        normalized_image=normalize(resized_image)\n",
-    "        images.append(normalized_image)\n",
+    "    # Predict\n",
+    "    with torch.no_grad():\n",
+    "        output = model(input_tensor)\n",
+    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
     "\n",
-    "    return images"
+    "    # Interpret the result\n",
+    "    predicted_class = probabilities.argmax().item()\n",
+    "    confidence = probabilities[predicted_class].item()\n",
+    "    predicted_class_name = class_names[predicted_class]\n",
+    "    return f\"Class: {predicted_class_name}, Confidence: {confidence:.2f}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "47cbcd5b-72ee-40eb-aba2-04c3d34f3d4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#preprocessing. Annyi sort hoz létre a dataframeben ahány kép van. A táblázatos adatok ugyanazok mindenhol. Visszaadja a kész dataframe-t\n",
-    "\n",
-    "def preprocessing (gender, age_group, file_format, dicom, image):\n",
-    "    cols=['Is_Male', 'Age_Group_3', 'Age_Group_4', 'Age_Group_5', 'Age_Group_6', 'Age_Group_7', 'Age_Group_8', 'Image']\n",
-    "    cols_age=[ 'Age_Group_3', 'Age_Group_4', 'Age_Group_5', 'Age_Group_6', 'Age_Group_7', 'Age_Group_8']\n",
-    "    df = pd.DataFrame(columns=cols)\n",
-    "    \n",
-    "    #image\n",
-    "    proc_img=preprocess_image(image, dicom, file_format)\n",
-    "    if (len(proc_img)==1):\n",
-    "        df.loc[0, 'Image']=proc_img\n",
-    "    else:\n",
-    "        for i in range(len(proc_img)):\n",
-    "            df.loc[i, 'Image']=proc_img[i]\n",
-    "\n",
-    "    df['Image'] = df['Image'].apply(lambda x: np.array(x).flatten())\n",
-    "    \n",
-    "    #age_group\n",
-    "    for item in cols_age:\n",
-    "        if (int(item[10])==int(age_group[0])-1):\n",
-    "            df[item]=True\n",
-    "        else:\n",
-    "            df[item]=False\n",
-    "    #gender\n",
-    "    if (gender=='Male'):\n",
-    "        df['Is_Male']=True\n",
-    "    else:\n",
-    "        df['Is_Male']=False\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "e302776a-9edf-44c8-a67b-3b149c031d36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#betölti az előtrainelt modelleket, prediktál. \n",
-    "#ha egy kép/dicom fájl van, akkor csak kiírja a diagnózist\n",
-    "# ha több dicom fájl van akkor a módusz a diagnózis, és és a számosságuk/összes fájl lesz a százalék hogy milyen bizonyossággal az a betegség\n",
-    "\n",
-    "def model_predict(gender, age_group, file_format, dicom, image):\n",
-    "    df=preprocessing(gender, age_group, file_format, dicom, image)\n",
-    "    voting_classifier=joblib.load('voting_classifier.joblib')\n",
-    "\n",
-    "    #df_image=df['Image'].tolist()\n",
-    "    #df_patient_data=df.drop('Image', axis=1)\n",
-    "\n",
-    "    y_image=voting_classifier.predict(df)\n",
-    "\n",
-    "    labels = {0: 'Normal', 1: 'Heart failure with infarct', 2: 'Heart failure without infarct', 3: 'Hypertrophy'}\n",
-    "\n",
-    "    if (len(y_image)==1):\n",
-    "        return labels[y_image[0]]\n",
-    "    else:\n",
-    "        result=mode(y_image)\n",
-    "        string=f\"{labels[result.mode]} with an {result.count/len(y_image)*100}% certainty\"\n",
-    "        return string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "2bbe7167-e4d2-4c24-a022-502f196717f5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7864\n",
-      "Running on public URL: https://fa4d084bb720f49d7d.gradio.live\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on public URL: https://cd9c4b38f6ea168476.gradio.live\n",
       "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://fa4d084bb720f49d7d.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://cd9c4b38f6ea168476.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -169,34 +102,109 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\queueing.py\", line 625, in process_events\n",
+      "    response = await route_utils.call_process_api(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\route_utils.py\", line 322, in call_process_api\n",
+      "    output = await app.get_blocks().process_api(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 2042, in process_api\n",
+      "    result = await self.call_function(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 1589, in call_function\n",
+      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\to_thread.py\", line 56, in run_sync\n",
+      "    return await get_async_backend().run_sync_in_worker_thread(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 2364, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 864, in run\n",
+      "    result = context.run(func, *args)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\utils.py\", line 883, in wrapper\n",
+      "    response = f(*args, **kwargs)\n",
+      "               ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\AppData\\Local\\Temp\\ipykernel_6632\\622681943.py\", line 3, in predict\n",
+      "    image = Image.fromarray(image)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\PIL\\Image.py\", line 3087, in fromarray\n",
+      "    arr = obj.__array_interface__\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'dict' object has no attribute '__array_interface__'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\queueing.py\", line 625, in process_events\n",
+      "    response = await route_utils.call_process_api(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\route_utils.py\", line 322, in call_process_api\n",
+      "    output = await app.get_blocks().process_api(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 2042, in process_api\n",
+      "    result = await self.call_function(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 1589, in call_function\n",
+      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\to_thread.py\", line 56, in run_sync\n",
+      "    return await get_async_backend().run_sync_in_worker_thread(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 2364, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 864, in run\n",
+      "    result = context.run(func, *args)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\utils.py\", line 883, in wrapper\n",
+      "    response = f(*args, **kwargs)\n",
+      "               ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\AppData\\Local\\Temp\\ipykernel_6632\\622681943.py\", line 3, in predict\n",
+      "    image = Image.fromarray(image)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\PIL\\Image.py\", line 3087, in fromarray\n",
+      "    arr = obj.__array_interface__\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'dict' object has no attribute '__array_interface__'\n"
+     ]
     }
    ],
    "source": [
-    "#gradio UI inicializálása és indítása\n",
+    "# Step 4: Set up Gradio\n",
+    "with gr.Blocks() as demo:\n",
+    "    with gr.Row():\n",
+    "        im = gr.ImageEditor(type=\"numpy\", crop_size=\"1:1\", label=\"Upload and Crop Image\")\n",
+    "        result = gr.Textbox(label=\"Prediction\")\n",
     "\n",
-    "options_gender= ['Female', 'Male']\n",
-    "options_age_group=['40 or younger', '41-50', '51-60', '61-70', '71-80', '81 or older']\n",
-    "options_file_upload=['DICOM', 'Other Image Format']\n",
-    "\n",
-    "demo = gr.Interface(\n",
-    "    fn=model_predict,\n",
-    "    inputs=[\n",
-    "        gr.Radio(options_gender, label=\"Patient's gender\"),\n",
-    "        gr.Radio(options_age_group, label=\"Patient's age\"),\n",
-    "        gr.Radio(options_file_upload, label=\"Choose your file format! You can upload several files with dicom format, but only one image\"), \n",
-    "        gr.File(label=\"Upload your DICOM file!\", file_count='multiple'),\n",
-    "        gr.Image(label='Upload your picture!')],\n",
-    "    outputs=gr.Textbox(label=\"Diagnosis\")\n",
-    ")\n",
-    "    \n",
-    "if __name__ == \"__main__\":\n",
-    "    demo.launch(inbrowser=True, show_api=False, share=True)   "
+    "    im.change(predict, outputs=result, inputs=im)\n",
+    "demo.launch(inbrowser=True, show_api=False, share=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1d9e996b-d159-41b8-9598-47760d967a67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1402326a-1f6b-4404-907e-ce763d2042ec",
    "metadata": {},
    "outputs": [],
    "source": []
