--- a/UI-Prep.ipynb
+++ b/UI-Prep.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import torch\n",
@@ -23,7 +24,8 @@
     "from NeuralNetworkDIY import ClassifierNetwork, Model\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from torchvision import datasets, transforms\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -77,43 +79,10 @@
    "execution_count": 4,
    "id": "1aa1a1c1-e505-468e-be4e-e19c9d0e3962",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fake\n",
-      "{8000}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 152/152 [23:51<00:00,  9.42s/it]\n",
-      "Processing valid: 100%|██████████| 8/8 [01:09<00:00,  8.70s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on real\n",
-      "{3500}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 67/67 [09:50<00:00,  8.82s/it]\n",
-      "Processing valid: 100%|██████████| 4/4 [00:32<00:00,  8.22s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0, filters=False)\n",
-    "process.run(0.95, 0.05)"
+    "# process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=3, filters=False)\n",
+    "# process.run(0.95, 0.05)"
    ]
   },
   {
@@ -126,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "21abdd73-fc67-4085-88c6-698059ea38a1",
    "metadata": {},
    "outputs": [],
@@ -154,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2db67dc5-5aec-4e72-99ae-572fcf680ba1",
    "metadata": {},
    "outputs": [],
@@ -174,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "9286121d-f4ff-4c8f-a121-85026df1fa60",
    "metadata": {},
    "outputs": [],
@@ -184,17 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "45fed2e7-7404-4a3b-8629-6083842e3188",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=Model(network, 20)"
+    "model=Model(network, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f9b56644-fdfe-4608-a0cf-c468db7310ee",
    "metadata": {},
    "outputs": [
@@ -202,16 +171,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batches: 80\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Epoch 1/10, Loss: 0.7234056819767374\n",
+      "Epoch 2/10, Loss: 0.44661855315725646\n",
+      "Epoch 3/10, Loss: 0.33239736798426106\n",
+      "Epoch 4/10, Loss: 0.2694991558483318\n",
+      "Epoch 5/10, Loss: 0.22565780639716634\n",
+      "Epoch 6/10, Loss: 0.19614586138616164\n",
+      "Epoch 7/10, Loss: 0.17321705922177508\n",
+      "Epoch 8/10, Loss: 0.15442254811150258\n",
+      "Epoch 9/10, Loss: 0.13892722494678583\n",
+      "Epoch 10/10, Loss: 0.12499064688722111\n"
      ]
     }
    ],
@@ -221,18 +190,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "00bbca1a-45ec-4ab3-aea1-c604f1b3442e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), 'ADL_model.pth')"
+    "torch.save(model, 'ADL_model.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7a038aea-e99f-4058-86b4-0b9f4bbeda6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b64f47f-3db5-4b73-bbe1-acb7b1ed2ded",
    "metadata": {},
    "outputs": [],
    "source": []
