--- a/User Interface.ipynb
+++ b/User Interface.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e4867f21-acc8-4a8a-bb24-1403f40a7cf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchvision import transforms\n",
@@ -16,21 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bd2eb4aa-abe0-45d6-ad8a-117199d60f2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NeuralNetworkDIY.Model"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# model_path = \"model.pth\"\n",
-    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# model = ClassifierNetwork(IMAGE_SIZE=(128,128))  # Match the training setup\n",
-    "# model.load_state_dict(torch.load(model_path, map_location=device))\n",
-    "# model.to(device).eval()"
+    "model_path = \"ADL_model.pth\"\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = torch.load(model_path, weights_only=False)\n",
+    "\n",
+    "type(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "769e5b66-189b-4259-9cb3-f5ce17413546",
    "metadata": {},
    "outputs": [],
@@ -43,41 +63,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "aeb68b03-fca7-4bda-85a6-4769502fe7ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_names = [\"Class 0\", \"Class 1\"]"
+    "class_names = [\"Real\", \"Fake\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4c2e79d0-b013-4ab5-9237-43f0ac446e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(image):\n",
+    "def predict(_image):\n",
     "    # Preprocess the image\n",
-    "    image = Image.fromarray(image)\n",
+    "    print(_image)\n",
+    "    image=_image.get(\"composite\")\n",
+    "    if (image== None ):\n",
+    "        image=_image.get(\"background\")\n",
+    "        \n",
     "    input_tensor = transform(image).unsqueeze(0).to(device)  # Add batch dimension\n",
-    "\n",
+    "    print(input_tensor.shape)\n",
     "    # Predict\n",
     "    with torch.no_grad():\n",
-    "        output = model(input_tensor)\n",
-    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "        output = model.predict(input_tensor)\n",
     "\n",
-    "    # Interpret the result\n",
-    "    predicted_class = probabilities.argmax().item()\n",
-    "    confidence = probabilities[predicted_class].item()\n",
-    "    predicted_class_name = class_names[predicted_class]\n",
-    "    return f\"Class: {predicted_class_name}, Confidence: {confidence:.2f}\""
+    "    print(output)\n",
+    "\n",
+    "    return f\"It is a {class_names[output[0]]} image, with a confidence of {output[1]}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "47cbcd5b-72ee-40eb-aba2-04c3d34f3d4a",
    "metadata": {},
    "outputs": [
@@ -86,7 +107,7 @@
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* Running on public URL: https://cd9c4b38f6ea168476.gradio.live\n",
+      "* Running on public URL: https://d0d05ba5e90f51841e.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -94,7 +115,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://cd9c4b38f6ea168476.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://d0d05ba5e90f51841e.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -107,86 +128,16 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\queueing.py\", line 625, in process_events\n",
-      "    response = await route_utils.call_process_api(\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\route_utils.py\", line 322, in call_process_api\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 2042, in process_api\n",
-      "    result = await self.call_function(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 1589, in call_function\n",
-      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\to_thread.py\", line 56, in run_sync\n",
-      "    return await get_async_backend().run_sync_in_worker_thread(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 2364, in run_sync_in_worker_thread\n",
-      "    return await future\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 864, in run\n",
-      "    result = context.run(func, *args)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\utils.py\", line 883, in wrapper\n",
-      "    response = f(*args, **kwargs)\n",
-      "               ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\AppData\\Local\\Temp\\ipykernel_6632\\622681943.py\", line 3, in predict\n",
-      "    image = Image.fromarray(image)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\PIL\\Image.py\", line 3087, in fromarray\n",
-      "    arr = obj.__array_interface__\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: 'dict' object has no attribute '__array_interface__'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\queueing.py\", line 625, in process_events\n",
-      "    response = await route_utils.call_process_api(\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\route_utils.py\", line 322, in call_process_api\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 2042, in process_api\n",
-      "    result = await self.call_function(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\blocks.py\", line 1589, in call_function\n",
-      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\to_thread.py\", line 56, in run_sync\n",
-      "    return await get_async_backend().run_sync_in_worker_thread(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 2364, in run_sync_in_worker_thread\n",
-      "    return await future\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 864, in run\n",
-      "    result = context.run(func, *args)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\gradio\\utils.py\", line 883, in wrapper\n",
-      "    response = f(*args, **kwargs)\n",
-      "               ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\AppData\\Local\\Temp\\ipykernel_6632\\622681943.py\", line 3, in predict\n",
-      "    image = Image.fromarray(image)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\annal\\anaconda3\\envs\\jupyterlab\\Lib\\site-packages\\PIL\\Image.py\", line 3087, in fromarray\n",
-      "    arr = obj.__array_interface__\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: 'dict' object has no attribute '__array_interface__'\n"
-     ]
     }
    ],
    "source": [
     "# Step 4: Set up Gradio\n",
     "with gr.Blocks() as demo:\n",
     "    with gr.Row():\n",
-    "        im = gr.ImageEditor(type=\"numpy\", crop_size=\"1:1\", label=\"Upload and Crop Image\")\n",
+    "        im = gr.ImageEditor(type=\"pil\", crop_size=\"1:1\", image_mode=\"RGB\", label=\"Upload and Crop Image\")\n",
     "        result = gr.Textbox(label=\"Prediction\")\n",
     "\n",
     "    im.change(predict, outputs=result, inputs=im)\n",
@@ -212,9 +163,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:jupyterlab]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-jupyterlab-py"
   },
   "language_info": {
    "codemirror_mode": {
