Forgot to upload final solution
here it is

--- a/User Interface.ipynb
+++ b/User Interface.ipynb
@@ -100,14 +100,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "47cbcd5b-72ee-40eb-aba2-04c3d34f3d4a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* Running on public URL: https://d0d05ba5e90f51841e.gradio.live\n",
+      "* Running on public URL: https://cc01ed17bcd7f66caf.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -115,7 +117,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://d0d05ba5e90f51841e.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://cc01ed17bcd7f66caf.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -156,6 +158,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1402326a-1f6b-4404-907e-ce763d2042ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f5a99a-f3bd-472b-ba0b-0c96bb738ed5",
    "metadata": {},
    "outputs": [],
    "source": []
